--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>message for you</title>
+    <title>message for Trang</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Will you go out with me?</h2>
+        <h2 class="question">Bạn Trang có bị khìn ko?</h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
